fix: scrollbar issue

--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,7 @@
 .container {
   min-height: 100vh;
   width: 98vw;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 #App {
